[gd_scene load_steps=3 format=3 uid="uid://c1hg8vg83s6wv"]

[ext_resource type="Script" uid="uid://bt3gyo62qvl7t" path="res://ui/hud/hud.gd" id="1_xmswo"]
[ext_resource type="PackedScene" uid="uid://ck64syesq4jbj" path="res://ui/hud/hud_upgrade_selection.tscn" id="2_4d6w6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xmswo")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="DoomStatusContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EquipmentContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_4d6w6")]
unique_name_in_owner = true
layout_mode = 2
